...
    <string name="congratulation_your_profile_have_been_successfully_created">Congratulation your profile have been successfully created !</string>
    <string name="begin_now">BEGIN NOW</string>
    <string name="explication_text_username_init">You can click on the CHECK AVAILABILITY button to check if your proposition is available. After you click on the VALIDATE button your user name is fixed.</string>
    <string name="how_many_time_do_you_want_to_practice_exercise_each_day_in_minutes">How many minutes do you plan to practice exercise each day ?</string>
    <string name="profile_menu_item">Profile</string>
    <string name="draw_menu_item">Draw</string>
    <string name="history_menu_item">History</string>
    <string name="community_menu_item">Community</string>
    <string name="friends_menu_item">Friends</string>
    <string name="username">Username</string>
    <string name="email_example">example@smth.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="stats">Stats</string>
...
    <string name="senderName">Sender Name</string>
    <string name="message_content_string">Message Content</string>
    <string name="chat_welcome_message">Welcome to the chat!</string>
    <string name="delete_chat_icon_text">Delete</string>
    <string name="acquired">Acquired %s</string>
    <string name="changeLeftButton"><![CDATA[<]]></string>
    <string name="path_drawn">Path Drawn</string>
    <string name="changeRightButton"><![CDATA[>]]></string>
    <string name="global_stats">Global Stats</string>
    <string name="ml_shape_recognition_description">Remark : The shape description and score (the best score is 0), given above, are given by an automatic form recognition Machine Learning model.</string>
    <string name="shape_recognized_on_the_path_drawn">- Shape recognized on the Path drawn :</string>
    <string name="score_of_the_shape_recognized">- Score of the shape recognized :</string>
    <string name="average_speed_per_km">Avg Speed per Km</string>
    <string name="duration_per_km">Duration per Km</string>
    <string name="distance_per_segment">Distance per Segment</string>
    <string name="duration_per_segment">Duration per Segment</string>
    <string name="average_speed_per_segment">Avg Speed per Segment</string>
    <string name="distance_in_km">Distance (in Km)</string>
    <string name="average_speed_in_m_s">Average Speed (m/s)</string>
    <string name="duration_in_s">Duration (s)</string>
    <string name="segment">Segment</string>
    <string name="distance_in_m">Distance (in m)</string>
    <string name="tournament_post_creation">Tournament Post Creation</string>
    <string name="select_the_tournament">Select the tournament</string>
    <string name="select_the_run">Select the run</string>
    <string name="post">Post</string>
    <string name="add_post">add post</string>
    <string name="display_distance">Distance: %s kilometers</string>
...
