<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:id="@+id/run_info_stats_fragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/changeLeftButton"
            android:id="@+id/changeLeftRunInfo"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_margin="10dp"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/path_drawn"
            android:id="@+id/titleRunInfo"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="18sp" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:translationZ="2dp"
            android:text="@string/changeRightButton"
            android:id="@+id/changeRightRunInfo"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/contentPreviewRunInfo"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contentDescriptionRunInfo"/>
</LinearLayout>